--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,10 @@
 site_name: My site
 site_url: https://mydomain.org/mysite
+site_description: This is a static site for William Hao to update blogs and music.
+
 theme:
   name: material
+
+plugins:
+  - search
+  - blog
