--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,13 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to system preference
+
 plugins:
   - search
   - blog
+
+markdown_extensions:
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
